--- a/misc/gkrellm-flynn/Makefile
+++ b/misc/gkrellm-flynn/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.1.1.1 2004/02/25 00:49:59 cube Exp $
+# $NetBSD: Makefile,v 1.2 2004/03/07 03:46:30 minskim Exp $
 #
 
 DISTNAME=	gkrellflynn-0.8
@@ -15,5 +15,6 @@ USE_GNU_TOOLS+=	make
 ALL_TARGET=	gkrellm2
 INSTALL_TARGET=	installgkrellm2
 
+.include "../../devel/pkgconfig/buildlink3.mk"
 .include "../../sysutils/gkrellm/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
