--- a/misc/gkrellm-leds/Makefile
+++ b/misc/gkrellm-leds/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.1.1.1 2004/02/25 00:52:33 cube Exp $
+# $NetBSD: Makefile,v 1.2 2004/03/07 03:46:30 minskim Exp $
 #
 
 DISTNAME=	gkleds-0.8.1
@@ -17,5 +17,6 @@ ALL_TARGET=	unix
 do-install:
 	${INSTALL_DATA} ${WRKSRC}/gkleds.so ${PREFIX}/lib/gkrellm2/plugins
 
+.include "../../devel/pkgconfig/buildlink3.mk"
 .include "../../sysutils/gkrellm/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
