--- a/net/gkrellm-multiping/Makefile
+++ b/net/gkrellm-multiping/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.1.1.1 2004/02/24 23:41:55 cube Exp $
+# $NetBSD: Makefile,v 1.2 2004/03/07 03:58:55 minskim Exp $
 #
 
 DISTNAME=	gkrellm-multiping-2.0.8
@@ -21,6 +21,7 @@ post-patch:
 	${SED} -e s,@@PREFIX@@,${PREFIX}, ${WRKSRC}/multiping.c > ${WRKSRC}/multiping.c.sed
 	${CP} ${WRKSRC}/multiping.c.sed ${WRKSRC}/multiping.c
 
+.include "../../devel/pkgconfig/buildlink3.mk"
 .include "../../sysutils/gkrellm/buildlink3.mk"
 .include "../../mk/pthread.buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
