--- a/devel/SDL_gfx/Makefile
+++ b/devel/SDL_gfx/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.14 2004/02/27 00:22:07 ben Exp $
+# $NetBSD: Makefile,v 1.15 2004/03/07 04:21:55 snj Exp $
 #
 
 DISTNAME=	SDL_gfx-2.0.10
@@ -9,7 +9,7 @@ MAINTAINER=	ben@NetBSD.org
 HOMEPAGE=	http://www.ferzkopp.net/~aschiffler/Software/SDL_gfx-2.0/
 COMMENT=	Basic drawing routines for SDL
 
-USE_BUILDLINK2=		YES
+USE_BUILDLINK3=		YES
 USE_X11=		YES
 GNU_CONFIGURE=		YES
 USE_GNU_TOOLS+=		make
@@ -26,5 +26,5 @@ post-install:
 	${INSTALL_DATA} ${WRKSRC}/Docs/Screenshots/* \
 		${PREFIX}/share/doc/SDL_gfx/Screenshots
 
-.include "../../devel/SDL/buildlink2.mk"
+.include "../../devel/SDL/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
