--- a/games/crack-attack/Makefile
+++ b/games/crack-attack/Makefile
@@ -1,11 +1,11 @@
-# $NetBSD: Makefile,v 1.2 2004/02/27 02:55:24 xtraeme Exp $
+# $NetBSD: Makefile,v 1.3 2004/03/07 05:39:38 snj Exp $
 #
 
 DISTNAME=	crack-attack-1.1.10
 CATEGORIES=	games
 MASTER_SITES=	http://aluminumangel.org/cgi-bin/download_counter.cgi?attack_linux+attack/
 
-MAINTAINER=	snj@pobox.com
+MAINTAINER=	snj@NetBSD.org
 HOMEPAGE=	http://aluminumangel.org/attack/
 COMMENT=	Tetris Attack inspired game
 
