--- a/audio/libao-esound/Makefile
+++ b/audio/libao-esound/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.4 2004/01/07 18:00:16 jlam Exp $
+# $NetBSD: Makefile,v 1.5 2004/03/07 06:21:51 minskim Exp $
 #
 
-USE_BUILDLINK2=	yes
+USE_BUILDLINK3=	yes
 
 .include "../libao/Makefile.common"
 
@@ -14,6 +14,6 @@ CONFIGURE_ARGS:=	${CONFIGURE_ARGS:S/disable-esd/enable-esd/g}
 BUILD_DIRS=		${WRKSRC}/src/plugins/esd
 INSTALL_DIRS=		${WRKSRC}/src/plugins/esd
 
-.include "../../audio/esound/buildlink2.mk"
-.include "../../audio/libao/buildlink2.mk"
+.include "../../audio/esound/buildlink3.mk"
+.include "../../audio/libao/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
