--- a/games/defendguin/Makefile
+++ b/games/defendguin/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.5 2004/01/24 13:30:55 grant Exp $
+# $NetBSD: Makefile,v 1.6 2004/03/07 06:43:34 snj Exp $
 
 DISTNAME=	defendguin-0.0.10
 PKGREVISION=	2
@@ -10,10 +10,9 @@ HOMEPAGE=	http://www.newbreedsoftware.com/defendguin/
 COMMENT=	Clone of the arcade game Defender
 
 USE_X11=	YES
-USE_BUILDLINK2=	YES
+USE_BUILDLINK3=	YES
 
 USE_GNU_TOOLS+=	make
-MAKE_ENV+=	PREFIX=${LOCALBASE}
 
-.include "../../audio/SDL_mixer/buildlink2.mk"
+.include "../../audio/SDL_mixer/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
