--- a/audio/SDL_sound/Makefile
+++ b/audio/SDL_sound/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.7 2004/02/14 17:21:32 jlam Exp $
+# $NetBSD: Makefile,v 1.8 2004/03/07 06:58:39 snj Exp $
 #
 
 DISTNAME=		SDL_sound-1.0.1
@@ -10,12 +10,12 @@ HOMEPAGE=		http://icculus.org/SDL_sound/
 COMMENT=		SDL library to handle the decoding of different file formats
 
 GNU_CONFIGURE=		YES
-USE_X11=		YES
+USE_BUILDLINK3=		YES
 USE_LIBTOOL=		YES
-USE_BUILDLINK2=		YES
+USE_X11=		YES
 
-.include "../../audio/libmikmod/buildlink2.mk"
-.include "../../audio/libvorbis/buildlink2.mk"
-.include "../../devel/SDL/buildlink2.mk"
-.include "../../devel/smpeg/buildlink2.mk"
+.include "../../audio/libmikmod/buildlink3.mk"
+.include "../../audio/libvorbis/buildlink3.mk"
+.include "../../devel/SDL/buildlink3.mk"
+.include "../../devel/smpeg/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
