--- a/games/gltron/Makefile
+++ b/games/gltron/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.9 2004/01/20 12:15:40 agc Exp $
+# $NetBSD: Makefile,v 1.10 2004/03/07 06:59:21 snj Exp $
 #
 
 DISTNAME=	gltron-0.70-source
@@ -12,11 +12,11 @@ HOMEPAGE=	http://gltron.sourceforge.net/
 COMMENT=	3D lightcycle game inspired by the movie Tron
 
 WRKSRC=		${WRKDIR}/${PKGBASE}
-USE_BUILDLINK2=	YES
+USE_BUILDLINK3=	YES
 GNU_CONFIGURE=	YES
 
-.include "../../audio/SDL_sound/buildlink2.mk"
-.include "../../graphics/MesaLib/buildlink2.mk"
-.include "../../graphics/png/buildlink2.mk"
+.include "../../audio/SDL_sound/buildlink3.mk"
+.include "../../graphics/MesaLib/buildlink3.mk"
+.include "../../graphics/png/buildlink3.mk"
 
 .include "../../mk/bsd.pkg.mk"
