--- a/games/lbreakout2/Makefile
+++ b/games/lbreakout2/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.11 2003/12/08 14:41:39 wiz Exp $
+# $NetBSD: Makefile,v 1.12 2004/03/07 07:12:56 snj Exp $
 #
 
 DISTNAME=	lbreakout2-2.4.1
@@ -10,20 +10,16 @@ MAINTAINER=	xs@nitric.net
 HOMEPAGE=	http://lgames.sourceforge.net/
 COMMENT=	Breakout-style arcade game
 
-USE_BUILDLINK2=		YES
+USE_BUILDLINK3=		YES
 USE_X11=		YES
 GNU_CONFIGURE=		YES
 CONFIGURE_ARGS+=	--with-highscore-path=${LOCALBASE}/share/games/ \
 			--with-doc-path=${LOCALBASE}/share/doc/html/
 
-.include "../../mk/bsd.prefs.mk"
+LDFLAGS.SunOS+=	-lsocket -lnsl
 
-.if ${OPSYS} == "SunOS"
-LDFLAGS+=	-lsocket -lnsl
-.endif
-
-.include "../../graphics/png/buildlink2.mk"
-.include "../../audio/SDL_mixer/buildlink2.mk"
-.include "../../devel/SDL/buildlink2.mk"
+.include "../../graphics/png/buildlink3.mk"
+.include "../../audio/SDL_mixer/buildlink3.mk"
+.include "../../devel/SDL/buildlink3.mk"
 
 .include "../../mk/bsd.pkg.mk"
