--- a/games/ltris/Makefile
+++ b/games/ltris/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.8 2003/12/08 14:41:39 wiz Exp $
+# $NetBSD: Makefile,v 1.9 2004/03/07 07:19:57 snj Exp $
 #
 
 DISTNAME=	ltris-1.0.1
@@ -10,12 +10,12 @@ MAINTAINER=	xs@nitric.net
 HOMEPAGE=	http://lgames.sourceforge.net/
 COMMENT=	SDL tetris clone
 
-USE_BUILDLINK2=		YES
+USE_BUILDLINK3=		YES
 USE_X11=		YES
 GNU_CONFIGURE=		YES
 CONFIGURE_ARGS+=	--with-highscore-path=${LOCALBASE}/share/games/
 
-.include "../../audio/SDL_mixer/buildlink2.mk"
-.include "../../devel/SDL/buildlink2.mk"
+.include "../../audio/SDL_mixer/buildlink3.mk"
+.include "../../devel/SDL/buildlink3.mk"
 
 .include "../../mk/bsd.pkg.mk"
