--- a/games/crimsonfields/Makefile
+++ b/games/crimsonfields/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.13 2004/02/07 17:19:39 wiz Exp $
+# $NetBSD: Makefile,v 1.14 2004/03/07 07:34:20 snj Exp $
 #
 
 DISTNAME=		crimson-0.3.8
@@ -11,13 +11,13 @@ MAINTAINER=		wiz@NetBSD.org
 HOMEPAGE=		http://crimson.seul.org/
 COMMENT=		Tactical war game in the tradition of Battle Isle
 
-USE_BUILDLINK2=		yes
+USE_BUILDLINK3=		yes
 USE_GNU_TOOLS+=		make
 USE_PKGLOCALEDIR=	yes
 GNU_CONFIGURE=		yes
 
 CONFIGURE_ARGS+=	--enable-bi2cf --enable-cfed --enable-comet
 
-.include "../../audio/SDL_mixer/buildlink2.mk"
-.include "../../devel/SDL/buildlink2.mk"
+.include "../../audio/SDL_mixer/buildlink3.mk"
+.include "../../devel/SDL/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
