--- a/graphics/qcamview/Makefile
+++ b/graphics/qcamview/Makefile
@@ -1,21 +1,20 @@
-# $NetBSD: Makefile,v 1.2 2004/01/03 18:49:44 reed Exp $
+# $NetBSD: Makefile,v 1.3 2004/03/07 08:23:14 hamajima Exp $
 #
 
 DISTNAME=	qce-ga-0.40d
-PKGNAME=	qcamview-0.2
-PKGREVISION=	1
+PKGNAME=	qcamview-0.4
 CATEGORIES=	graphics x11
 MASTER_SITES=	${MASTER_SITE_SOURCEFORGE:=qce-ga/}
 
 PATCH_SITES=	http://www2.starcat.ne.jp/~takam/bsd/
-PATCHFILES= 	qce-ga-bsd-0.02.patch.gz
+PATCHFILES= 	qce-ga-bsd-0.04.patch.gz
 PATCH_DIST_STRIP=	-p1
 
 MAINTAINER=	hamajima@NetBSD.org
 HOMEPAGE=	http://www2.starcat.ne.jp/~takam/bsd/NetBSD.html#qcam
 COMMENT=	Logitech Quickcam Express USB Utilities
 
-USE_BUILDLINK2=		# defined
+USE_BUILDLINK3=		# defined
 
 do-build:
 	for f in qcamshot qcamview ; do				\
@@ -29,7 +28,7 @@ do-install:
 		${MAKE_PROGRAM} -f ${MAKEFILE}.$$f install ;	\
 	done
 
-.include "../../graphics/imlib/buildlink2.mk"
-.include "../../x11/gtk/buildlink2.mk"
+.include "../../graphics/imlib/buildlink3.mk"
+.include "../../x11/gtk/buildlink3.mk"
 
 .include "../../mk/bsd.pkg.mk"
