--- a/editors/abiword/Makefile
+++ b/editors/abiword/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.71 2004/03/07 10:41:03 jmmv Exp $
+# $NetBSD: Makefile,v 1.72 2004/03/07 10:44:00 jmmv Exp $
 #
 
-DISTNAME=		abiword-${DIST_VER}
+DISTNAME=		abiword-2.0.4
 PKGREVISION=		1
 CATEGORIES=		editors
 MASTER_SITES=		${MASTER_SITE_SOURCEFORGE:=abiword/}
@@ -16,20 +16,16 @@ BUILD_USES_MSGFMT=	yes
 # GTK1 version and previous name of the GTK2 version
 CONFLICTS=		abiword-personal-[0-9]* abiword2-[0-9]*
 
-WRKSRC=			${WRKDIR}/${DISTNAME}/abi
+MAKEFILE=		GNUmakefile
 GNU_CONFIGURE=		yes
 USE_BUILDLINK3=		yes
+USE_GNU_ICONV=		yes # XXX
 USE_GNU_TOOLS+=		make
 USE_PERL5=		run
 USE_X11=		yes
+WRKSRC=			${WRKDIR}/${DISTNAME}/abi
 
 REPLACE_PERL=		user/wp/scripts/abw2html.pl
-
-USE_GNU_ICONV=		yes # XXX
-
-MAKEFILE=		GNUmakefile
-
-DIST_VER=		2.0.4
 
 CONFIGURE_ARGS+=	--enable-gucharmap
 CONFIGURE_ARGS+=	--enable-threads
