--- a/sysutils/coreutils/Makefile
+++ b/sysutils/coreutils/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.17 2004/02/24 14:11:36 grant Exp $
+# $NetBSD: Makefile,v 1.18 2004/03/07 11:31:34 recht Exp $
 
 DISTNAME=	coreutils-5.2.0
 CATEGORIES=	sysutils
@@ -24,21 +24,19 @@ TEST_TARGET=		check
 .include "../../mk/bsd.prefs.mk"
 
 CONFIGURE_ARGS=		--program-prefix=${GNU_PROGRAM_PREFIX}
-# devel/id-utils installs a 'gid' program, so conflict with it if
-# GNU_PROGRAM_PREFIX == 'g'
+# if GNU_PROGRAM_PREFIX == 'g'
+# devel/id-utils installs a 'gid' program, so conflict with it
+# databases/geneweb a 'gwc' program, so conflict with it
+# graphics/graphviz installs a 'gpr' program, so conflict with it
 .if ${GNU_PROGRAM_PREFIX} == "g"
 CONFLICTS+=		id-utils-[0-9]* gnome-utils<1.4.1.2nb2
 CONFLICTS+=		geneweb-[0-9]*
+CONFLICTS+=		graphviz-[0-9]*
 .endif
 # print/teTeX*-bin installs a 'readlink' program, so conflict with it if
 # GNU_PROGRAM_PREFIX == ''
 .if ${GNU_PROGRAM_PREFIX} == ""
 CONFLICTS+=		teTeX-bin-[0-9]*
-.endif
-# graphics/graphviz installs a 'gpr' program, so conflict with it if
-# GNU_PROGRAM_PREFIX == 'g'
-.if ${GNU_PROGRAM_PREFIX} == "g"
-CONFLICTS+=		graphviz-[0-9]*
 .endif
 
 PLIST_SUBST+=		GNU_PROGRAM_PREFIX=${GNU_PROGRAM_PREFIX}
