--- a/databases/geneweb/Makefile
+++ b/databases/geneweb/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.15 2004/01/22 08:02:15 grant Exp $
+# $NetBSD: Makefile,v 1.16 2004/03/07 11:32:44 recht Exp $
 #
 
 DISTNAME=	geneweb-4.09
@@ -18,6 +18,14 @@ RCD_SCRIPTS=	geneweb
 
 .if !exists(${LOCALBASE}/bin/ocamlc.opt)
 ALL_TARGET=	out
+.endif
+
+.include "../../mk/bsd.prefs.mk"
+
+# sysutils/coreutils a 'gwc' program, so conflict with it if
+# ${GNU_PROGRAM_PREFIX} == "g"
+.if ${GNU_PROGRAM_PREFIX} == "g"
+CONFLICTS+=	coreutils-[0-9]*
 .endif
 
 # Stripped OCAML binaries don't seem to work nolonger
