--- a/net/pure-ftpd/Makefile
+++ b/net/pure-ftpd/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.5 2004/01/30 11:31:37 jlam Exp $
+# $NetBSD: Makefile,v 1.6 2004/03/07 11:42:10 recht Exp $
 
-DISTNAME=	pure-ftpd-1.0.17a
+DISTNAME=	pure-ftpd-1.0.18
 CATEGORIES=	net
 MASTER_SITES=	ftp://ftp.pureftpd.org/pub/pure-ftpd/releases/		\
 		ftp://ftp2.fr.pureftpd.org/pub/mirrors/ftp.fr.pureftpd.org/pub/pure-ftpd/releases/ \
