--- a/textproc/scrollkeeper/Makefile
+++ b/textproc/scrollkeeper/Makefile
@@ -1,8 +1,8 @@
-# $NetBSD: Makefile,v 1.21 2004/02/14 17:21:53 jlam Exp $
+# $NetBSD: Makefile,v 1.22 2004/03/07 11:50:18 jmmv Exp $
 #
 
 DISTNAME=		scrollkeeper-0.3.14
-PKGREVISION=		1
+PKGREVISION=		2
 CATEGORIES=		textproc
 MASTER_SITES=		${MASTER_SITE_SOURCEFORGE:=scrollkeeper/}	\
 			${MASTER_SITE_GNOME:=sources/scrollkeeper/0.3/}
@@ -45,6 +45,9 @@ FILES_SUBST+=		SCROLLKEEPER_REBUILDDB="${SCROLLKEEPER_REBUILDDB}"
 
 EGDIR=		${PREFIX}/share/examples/scrollkeeper
 CONF_FILES=	${EGDIR}/scrollkeeper.conf ${PKG_SYSCONFDIR}/scrollkeeper.conf
+
+XML_CATALOGS=	${PREFIX}/share/xml/scrollkeeper/dtds/scrollkeeper-cl.dtd
+XML_CATALOGS+=	${PREFIX}/share/xml/scrollkeeper/dtds/scrollkeeper-omf.dtd
 
 .include "../../devel/gettext-lib/buildlink3.mk"
 .include "../../textproc/libxml2/buildlink3.mk"
